[tool.poetry]
name = "mydizexrt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.4.0"
gTTS = "^2.2.3"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
discord-py-slash-command = "^3.0.3"
orjson = "^3.6.5"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
